# nixy

./: .gitignore  Cargo.toml  Makefile  README.md  callgrind.out.35332  callgrind.out.38262  callgrind.out.41520  callgrind.out.42171  callgrind.out.42667  callgrind.out.45833  callgrind.out.53710  massif.out.59811  massif.out.64494  shell.nix
java/: IfClosure.java  IntegerAdditionClosure.java  MainClosure.java  MainClosure2.java  MainClosure_old.java  NixArray.java  NixAttrset.java  NixBoolean.java  NixFloat.java  NixInteger.java  NixLambda.java  NixLazy.java  NixLazyBase.java  NixLazyScoped.java  NixNumber.java  NixObject.java  NixPath.java  NixProxy.java  NixString.java  NixToString.java  NixValue.java
src/: ast.rs  codegen.rs  codegen_lowmem.rs  lexer.rs  main.rs  parser.rs  visitor.rs
src/parsers/bison_flex_nix_broken/: lexer-tab.cc  lexer-tab.hh  parser-tab.cc  parser-tab.hh  parser.y
src/parsers/nix/: Nix.g4  NixLexer.g4  NixParser.g4  lexer.cpp  lexer.l  location.hh  parser-tab.cc  parser-tab.hh  parser.cpp  parser.y
src/parsers/nix/lexer/: Nix.g4
src/parsers/nix/parser/: Nix.g4
src/parsers/nix2/: lexer.l  parser.cpp  parser.y
src/parsers/nix_antlr_broken/: NixLexer.g4
