[package]
name = "nixy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
itertools = "0.10"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
debug = true
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false