[package]
name = "nixy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
walkdir = "2"
itertools = "0.10"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
debug = true
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false
panic = "abort"